chore: change the name of the database

--- a/ChatService/appsettings.json
+++ b/ChatService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1200;Database=chatapp;User Id=sa;Password=rooTDb123;TrustServerCertificate=yes"
+    "DefaultConnection": "Server=localhost,1200;Database=labchat;User Id=sa;Password=rooTDb123;TrustServerCertificate=yes"
   },
   "Jwt": {
     "Key": "AAACHATAPPJOSEOJO1232PAODEQUEIJODOSANTOSSILVA"
