chore: just adding development enviroment variables in appsettings.Development.json

--- a/ChatService/appsettings.Development.json
+++ b/ChatService/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1200;Database=labchat;User Id=sa;Password=rooTDb123;TrustServerCertificate=yes"
+  },
+  "Jwt": {
+    "Key": "AAACHATAPPJOSEOJO1232PAODEQUEIJODOSANTOSSILVA"
   }
 }
