--- a/ChatService/appsettings.json
+++ b/ChatService/appsettings.json
@@ -11,5 +11,8 @@
   },
   "Jwt": {
     "Key": "AAACHATAPPJOSEOJO1232PAODEQUEIJODOSANTOSSILVA"
+  },
+  "CORS": {
+    "AllowedOrigins": "http://localhost:5173"
   }
 }
